# NodeAudit

./: .dockerignore  .env.example  .gitignore  Builder.md  Debugger.md  Dockerfile  Phases.md  README.md  Reviewer.md  inference.py  openenv.yaml  pyproject.toml  temp.md
code-review-env/: .env.example  Dockerfile  README.md  inference.py  inference_training.py  openenv.yaml  pyproject.toml  requirements-amd-rocm.txt  requirements.txt  run_project.py
code-review-env/analyzers/: __init__.py  ast_checker.py  pipeline.py
code-review-env/db/: __init__.py  database.py  migrations.py  models.py  schema.py  seed.py  store.py
code-review-env/env/: __init__.py  action.py  env_loader.py  environment.py  graph.py  models.py  observation.py  observation_builder.py  reward.py  runtime_config.py  state.py
code-review-env/ext_tests/: bfs.py
code-review-env/graders/: __init__.py  base_grader.py  easy_grader.py  hard_grader.py  medium_grader.py  review_runner.py
code-review-env/graph/: __init__.py  graph_manager.py  token_budget.py
code-review-env/llm/: __init__.py  agent_runner.py  critical_analysis.py  edge_summarizer.py  hard_issue_finder.py  lora_adapter.py  lora_finetune.py  thinking_judge.py
code-review-env/outputs/: NodeAudit_graph.html  graphreview_full_graph.html  graphreview_full_report.json  graphreview_full_report.md  tr-20260409110822_trajectories.jsonl  verification_report.txt
code-review-env/parser/: __init__.py  ast_parser.py  chunker.py  graph_builder.py  linter.py  semantic_checks.py  summarizer.py
code-review-env/plans/: Builder.md  Debugger.md  Phases.md  phase-05-visualization-reporting-plan.md  phase-07-major-refactor-static-ground-truth-training-suite-plan.md  phase-08-deterministic-ground-truth-agent-training-completion-plan.md
code-review-env/sample_codebase/: cart.py  checkout.py  ground_truth.json  payments.py
code-review-env/sample_project/: auth.py  config.py  database.py  huge_module.py  inventory.py  notifications.py  utils.py  validators.py
code-review-env/sample_project_canonical/: api.py  auth.py  cart.py  checkout.py  config.py  database.py  main.py  models.py  payments.py  utils.py
code-review-env/scripts/: clone_training_repos.sh  (+2 more)
(+59 files in other folders)
