[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-env"
version = "0.1.0"
description = "OpenEnv CodeReviewEnv"
requires-python = ">=3.11"
dependencies = [
	"openenv>=0.2.0",
	"fastapi>=0.115",
	"uvicorn>=0.30",
	"pyvis>=0.3.2",
]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
