[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-env"
version = "0.1.0"
description = "OpenEnv CodeReviewEnv"
requires-python = ">=3.11"
dependencies = [
	"openenv>=0.2.0",
	"fastapi>=0.115",
	"uvicorn>=0.30",
	"pyvis>=0.3.2",
	"mypy>=1.10",
	"pyright>=1.1.390",
	"semgrep>=1.75",
	"vulture>=2.11",
]

[project.scripts]
server = "server.app:main"
graphreview = "run_project:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
