[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-env"
version = "0.1.0"
description = "OpenEnv CodeReviewEnv"
requires-python = ">=3.11"
dependencies = [
	"openenv>=0.2.0",
	"fastapi>=0.115",
	"uvicorn>=0.30",
	"pyvis>=0.3.2",
	"pyright>=1.1.390",
	"pyre-check>=0.9.23",
	"radon>=6.0",
	"bandit>=1.7",
	"pylint>=3.2",
	"huggingface_hub>=0.31",
	"llama-cpp-python>=0.3.8",
	"datasets>=2.20",
	"trl>=0.25",
	"transformers>=4.48",
]

[project.scripts]
server = "server.app:main"
graphreview = "run_project:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
